Cambios en los estilos

--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -1,9 +1,3 @@
-@use '../custom' as *;
-
-.encabezado-prin{
-    @extend .d-flex, .justify-content-between;
-    .logo{
-        @extend .img-fluid;
-        width: 10%;  
-    }
+.contenedor{
+    width: 100%;
 }
