--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -1,9 +1,9 @@
-.container{
+.contenedor{
     width: 100%;
     display: grid;
     place-items: center;
     // background-color: red;
-    .container-center{
+    .contenedor-centrar{
         width: 85%;
         // background-color: aqua;
         display: flex;
