--- a/src/scss/base/_title.scss
+++ b/src/scss/base/_title.scss
@@ -1,6 +1,6 @@
-.container{
-    .container-center{
-        .container-title{
+.contenedor{
+    .contenedo-centrar{
+        .contenedor-titulo{
             margin: 2em 0;
         }
         .titulo{
