--- a/src/scss/modules/_module01.scss
+++ b/src/scss/modules/_module01.scss
@@ -1,5 +1,5 @@
-.container{
-    .container-grid{
+.contenedor{
+    .contenedor-grid{
         display:grid;
         grid-template-columns:repeat(3,1fr);
         gap:1em
