--- a/src/scss/modules/_module01.scss
+++ b/src/scss/modules/_module01.scss
@@ -2,6 +2,9 @@
     .contenedor-grid{
         display:grid;
         grid-template-columns:repeat(3,1fr);
-        gap:1em
+        gap:1em;
+        .item-2{
+            grid-column: 2/4;
+        }
     }
-}
+} 
