--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,6 +1,6 @@
 //Fuente
 
 //Media Queries
-$telefono: 480%;
-$tablet: 768%;
-$desktop: 1024%;
+$telefono: 480px;
+$tablet: 768px;
+$desktop: 1024px;
