--- a/layouts/Swiper.css
+++ b/layouts/Swiper.css
@@ -1,1 +1,56 @@
-#swiper-1 .swiper-slide img,#swiper-2 img{display:block;width:100%;object-fit:cover}#swiper-1 .swiper-slide img{height:14rem}#swiper-1{z-index:0;width:100%}#swiper-2{width:23vw;z-index:0}#swiper-2 img{overflow:hidden;border:solid 1px var(--Slate-400)}#swiper-2 .swiper-pagination-bullet{width:1.3em;height:1.3em;margin:0 .8em;background-color:var(--Violet-600);border:solid .1em var(--Slate-600)}@media screen and (max-width:1400px){#swiper-1 .swiper-slide img{display:block;width:100%;height:15rem;object-fit:cover}#swiper-2{width:80vw;z-index:0}}@media (max-width:425px){#swiper-1 .swiper-slide img{display:block;width:100%;height:7em;object-fit:cover}#swiper-2{width:78vw}}
+#swiper-1 .swiper-slide img,#swiper-2 img {
+    display:block;
+    width:100%;
+    object-fit:cover
+}
+#swiper-1 .swiper-slide img {
+    height:14rem
+}
+#swiper-1 {
+    z-index:0;
+    width:100%
+}
+#swiper-2 {
+    width:23vw;
+    /*min-width: 200px;  Ancho mínimo del contenedor Swiper */
+    z-index:0
+}
+#swiper-2 img {
+    width: 100%;
+    height: auto;
+    overflow:hidden;
+    border:solid 1px var(--Slate-400);
+    object-fit: cover;
+    /*min-width: 200px;  Ancho mínimo de la imagen */
+
+}
+#swiper-2 .swiper-pagination-bullet {
+    width:1.3em;
+    height:1.3em;
+    margin:0 .8em;
+    background-color:var(--Violet-600);
+    border:solid .1em var(--Slate-600)
+}
+@media screen and (max-width:1400px) {
+    #swiper-1 .swiper-slide img {
+        display:block;
+        width:100%;
+        height:15rem;
+        object-fit:cover
+    }
+    #swiper-2 {
+        width:80vw;
+        z-index:0
+    }
+}
+@media (max-width:425px) {
+    #swiper-1 .swiper-slide img {
+        display:block;
+        width:100%;
+        height:7em;
+        object-fit:cover
+    }
+    #swiper-2 {
+        width:78vw
+    }
+}
