--- a/src/scss/modules/_module01.scss
+++ b/src/scss/modules/_module01.scss
@@ -6,6 +6,10 @@
         gap:1em;
         .item-2{
             grid-column: 2/4;
-        }   
+        }
+        @include m.desktop{
+            display: grid;
+            grid-template-columns: 100%;
+        }
     }
 }
