Mixin para los media query

--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -9,3 +9,13 @@
         @content;
     }
 }
+@mixin tablet{
+    @media (max-width: v.$tablet){
+        @content;
+    }
+}
+@mixin dektop{
+    @media (max-width: v.$desktop){
+        @content;
+    }
+}
