--- a/src/scss/modules/_module01.scss
+++ b/src/scss/modules/_module01.scss
@@ -1,3 +1,4 @@
+@use '../base/mixins' as m;
 .contenedor{
     .contenedor-grid{
         display:grid;
@@ -5,6 +6,10 @@
         gap:1em;
         .item-2{
             grid-column: 2/4;
+        }
+        @include m.dektop{
+            display: flex;
+            flex-direction: column;
         }
     }
 }
