--- a/src/scss/modules/_module02.scss
+++ b/src/scss/modules/_module02.scss
@@ -22,7 +22,9 @@
                 border-radius: .5em;
                 border: solid c.$Slate-700;
                 box-shadow: .178em .178em .4em c.$Slate-600;
+                color: c.$Gray-100;
             }
+            
         }
     }
 }
