--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -19,3 +19,8 @@
         @content;
     }
 }
+@mixin neo($eje){
+    // border-radius: $radius;
+    // background: #e0e0e0;
+    box-shadow: $eje $eje ($eje*3) #00000048;
+}
