--- a/src/scss/modules/modulo03.scss
+++ b/src/scss/modules/modulo03.scss
@@ -18,3 +18,9 @@
         }
     }
 }
+.img__not{
+    width: 100%;
+    object-fit: cover;
+    object-position: cover;
+    background-color: gray;
+}
