--- a/src/scss/modules/modulo03.scss
+++ b/src/scss/modules/modulo03.scss
@@ -10,7 +10,7 @@
                 flex-direction: column;
             }
             .card-contenido{
-                width: 100%;
+                max-width: 100%;
                 background-color: c.$Slate-50;
                 border: 1px solid c.$Gray-300;
                 @include m.neo(4px);
@@ -23,4 +23,8 @@
     object-fit: cover;
     object-position: cover;
     background-color: gray;
+    img{
+        max-width: 100%;
+        max-height: 18em;
+    }
 }
