--- a/src/scss/modules/modulo03.scss
+++ b/src/scss/modules/modulo03.scss
@@ -37,8 +37,8 @@
                         margin-top: .5em;
                         font-weight: 600;
                         border-radius: .7em;
-                        :hover{
-                            
+                    :hover{
+                            background-color: c.$Pink-600;
                         }
                     }
                 }
