--- a/src/scss/modules/modulo03.scss
+++ b/src/scss/modules/modulo03.scss
@@ -16,6 +16,7 @@
                 @include m.neo(4px);
                 border-radius: .6em;
                 .card__Not{
+                    padding: 1em;
                     .titulo{
                         font-weight: 600;
                         text-transform: uppercase;
