--- a/src/scss/modules/_modulo01.scss
+++ b/src/scss/modules/_modulo01.scss
@@ -7,7 +7,7 @@
         .item-2{
             grid-column: 2/4;
         }
-        @include m.dektop{
+        @include m.desktop{
             display: flex;
             flex-direction: column;
         }
