--- a/layouts/Interes.css
+++ b/layouts/Interes.css
@@ -1,1 +1,38 @@
-.contenedor__interes,.contenedor__interes__grid div{display:grid;place-items:center;width:100%}.contenedor__interes .contenedor__principal{display:grid;place-content:center}.contenedor__interes .contenedor__interes__grid{display:grid;grid-template-columns:repeat(5,1fr);gap:1em}.contenedor__interes__grid div{min-height:17vh;overflow:hidden;border:1.59px solid var(--Slate-500);transition:.3s ease-in-out;border-radius:.5em}.contenedor__interes__grid div img{display:block;width:100%;object-fit:cover}@media screen and (max-width:1400px){.contenedor__interes .contenedor__interes__grid{display:grid;grid-template-columns:repeat(1,1fr)}}@media screen and (max-width:425px){.contenedor__interes .contenedor__interes__grid{display:grid;grid-template-columns:repeat(1,1fr)}}
+.contenedor__interes,.contenedor__interes__grid div {
+    display:grid;
+    place-items:center;
+    width:100%
+}
+.contenedor__interes .contenedor__principal {
+    display:grid;
+    place-content:center
+}
+.contenedor__interes .contenedor__interes__grid {
+    display:grid;
+    grid-template-columns:repeat(5,1fr);
+    gap:1em
+}
+.contenedor__interes__grid div {
+    min-height:17vh;
+    overflow:hidden;
+    border:1.59px solid var(--Slate-500);
+    transition:.3s ease-in-out;
+    border-radius:.5em
+}
+.contenedor__interes__grid div img {
+    display:block;
+    width:100%;
+    object-fit:cover
+}
+@media screen and (max-width:1400px) {
+    .contenedor__interes .contenedor__interes__grid {
+        display:grid;
+        grid-template-columns:repeat(1,1fr)
+    }
+}
+@media screen and (max-width:425px) {
+    .contenedor__interes .contenedor__interes__grid {
+        display:grid;
+        grid-template-columns:repeat(1,1fr)
+    }
+}
