--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -3,6 +3,10 @@
     display: grid;
     grid-template-columns: repeat(5, 1fr);
 }
+%grid-col-3{
+    display:grid;
+    grid-template-columns:repeat(3,1fr);
+}
 @mixin telefono{
     @media (max-width: v.$telefono){
         @content;
