--- a/src/scss/modules/_modulo01.scss
+++ b/src/scss/modules/_modulo01.scss
@@ -1,8 +1,7 @@
 @use '../base/mixins' as m;
 .contenedor{
     .contenedor-grid{
-        display:grid;
-        grid-template-columns:repeat(3,1fr);
+        @extend %grid-col-3;
         gap:1em;
         .item-2{
             grid-column: 2/4;
