--- a/src/scss/modules/_modulo04.scss
+++ b/src/scss/modules/_modulo04.scss
@@ -2,8 +2,7 @@
 .contenedor{
     .contenedor-centrar{
         .aviso-grid{
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            @extend %grid-col-3;
             @include m.desktop{
                 display: grid;
                 grid-template-columns: 100%;
