--- a/src/scss/modules/_modulo05.scss
+++ b/src/scss/modules/_modulo05.scss
@@ -2,7 +2,7 @@
 .contenedor{
     .contenedor-centrar{
         .col-5{
-            @extend %grid-col-5;  
+            @extend %grid-5;  
         }
     }
 }
