--- a/src/scss/base/_titulo.scss
+++ b/src/scss/base/_titulo.scss
@@ -1,14 +1,15 @@
 @use 'mixins' as m;
+@use 'colores' as c;
 .contenedor{
     .contenedor-centrar{
         .contenedor-titulo{
-            margin: 2em 0;
+            margin: 4em 0;
             .titulo{
                 font-size: 3.5em;
                 text-transform: uppercase;
-                text-shadow: 1px 1px 1px var(--Neutral-700), 2px 2px 1px var(--Neutral-500);
+                text-shadow: 1px 1px 1px c.$Neutral-700, 2px 2px 1px var c.$Neutral-500;
                 font-weight: 600;
-                color: var(--Slate-700);
+                color: c.$Slate-700;
                 overflow: hidden;
                 @include m.telefono{
                     font-size: 2em;
