--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -1,5 +1,6 @@
 // @import url(Colores.css);
 @use '../base/colores' as c;
+@use '../base/mixins' as m;
 :root {
     --color-body:#f0f0f0;
     --color-nav:#70635A;
@@ -9,9 +10,7 @@
 header{
     width: 100%;
     background-color: var(--color-nav);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @extend %flex-center;
     font-size: .9em;
     position: sticky;
     z-index: 1;
@@ -19,10 +18,13 @@ header{
     color: c.$Gray-100;
 }
 header .ul{
-    display: flex;
-    justify-content: center ;
-    align-items: center;
-    gap: 1em;
+    @extend %flex-center;
+    gap: 1.5em;
+    .li{
+        div{
+            display: flex;
+        }
+    }
 }
 .escudo_mur{
     position: relative;
@@ -51,16 +53,15 @@ header .ul{
     display: none;
     position: absolute;
     width: 5em;
-    background-color: var(--Gray-500);
+    background-color: c.$Gray-500;
     transition: all .2s ease-in-out;
-    box-shadow: 0 25px 50px -12px #00000040;
-
 }
 .nav .ul .li:hover .mini{
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 25em;
+    @include m.neo(20px);
 }
 .mini a{
     padding: .6em;
@@ -109,7 +110,7 @@ header .button{
 }
 /* ? Cierre Info */
 .contenedor__principal {
-    width:85%;
+    width:80%;
     display:flex;
     flex-flow:row wrap;
     justify-content:space-between;
@@ -144,9 +145,7 @@ header .button{
     padding:1.5em
 }
 .header__secundario .contenedor__principal__flex {
-    display:flex;
-    align-items:center;
-    justify-content:center
+
 }
 .btn-gray i,.btn-invert i {
     cursor:pointer;
