--- a/layouts/Main_Sec.css
+++ b/layouts/Main_Sec.css
@@ -1,85 +1,92 @@
 #swiper-4 {
     max-width:25em;
     z-index:0;
-    grid-column:2/3
+    grid-column:2/3;
 }
 #swiper-5 {
     width: auto;
-    max-height:40vh;
-    z-index:0
+    max-height:45vh;
+    z-index:0;
 }
 #swiper-5 .swiper-wrapper {
     height:100%;
     display:flex;
-    align-items:center
+    align-items:center;
 }
 #swiper-5 .swiper-wrapper .swiper-slide {
     width:100%;
-    height:10vh
+    height:20vh;
 }
 #swiper-5 img {
     display:block;
     height:40vh;    
-    object-fit:cover
+    object-fit:cover;
+}
+#swiper-5 .swiper-pagination-bullet {
+    width:1.5em;
+    height:1.5em;
+    margin:1.89em 0;
+    border:.1em solid #3a3737;
+}
+#swiper-5 .swiper-pagination-bullet {
+    width:1.5em;
+    height:1.5em;
+    margin:1.89em 0;
+    border:.1em solid #3a3737;
+}
+#swiper-5 .swiper-wrapper img {
+    display:block;
+    max-width:100%;
+    object-fit:cover;
+    border-radius:1em;
 }
 .item2-grid .emg {
     width:100%;
     display:grid;
     place-items:center;
     grid-row:1/3;
-    grid-column:1/4
+    grid-column:1/4;
 }
 .item2-grid .emg img {
     width:100%;
-    object-fit:cover
+    object-fit:cover;
 }
 #swiper-3 {
     width:17vw;
-    z-index:0
+    z-index:0;
 }
 #swiper-3 .swiper-wrapper img {
     display:block;
     width:100%;
     object-fit:cover;
-    border-radius:.5em
+    border-radius:.5em;
 }
 #swiper-3 .swiper-slide {
-    border-radius:.5em
+    border-radius:.5em;
 }
 #swiper-3 .swiper-pagination-bullet {
     width:1.2em;
     height:1.2em;
     margin:0 1em;
     background-color:var(--Sky-500);
-    border:solid .1em var(--Gray-500)
+    border:solid .1em var(--Gray-500);
 }
-#swiper-5 .swiper-pagination-bullet {
-    width:1.2em;
-    height:1.2em;
-    margin:.8em 0;
-    border:.1em solid #3a3737
-}
-#swiper-5 .swiper-wrapper img {
-    display:block;
-    width:100%;
-    object-fit:cover;
-    border-radius:1em
-}
+
 @media screen and (max-width:1400px) {
     .main__secondary .contenedor__principal {
         display:grid;
         grid-template-columns:repeat(1,1fr);
         place-items:center;
-        row-gap:3em
+        row-gap:3em;
     }
     .main__secondary .item2 {
-        width:100%
+        width:100%;
     }
     #swiper-4 {
         grid-column:2/3;
         width:48vw;
         z-index:0;
-        grid-column:2/3
+        grid-column:2/3;
     }
     .main__secondary .item1 {
         width:100%;
@@ -87,10 +94,10 @@
         align-items:center;
         justify-content:center;
         grid-column:1/2;
-        grid-row:2/4
+        grid-row:2/4;
     }
     #swiper-3 {
         width:65vw;
-        z-index:0
+        z-index:0;
     }
 }
