--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -1,4 +1,9 @@
-@use 'variables' as v;nter{
+@use 'variables' as v;
+%grid-3{
+    display:grid;
+    grid-template-columns:repeat(3,1fr);
+}
+%grid-center{
     display: grid;
     place-items: center;
 }
