--- a/layouts/Imagenes.css
+++ b/layouts/Imagenes.css
@@ -1,1 +1,51 @@
-.gallery,.main .contenedor__grid .item-1{width:100%}.contenedor__principal .article__exp{width:100%;display:flex;justify-content:end;align-items:center}.gallery{height:47vh;display:flex;gap:.3em;background-color:var(--Gray-200)}.gallery a{height:100%;flex:17;object-fit:cover;overflow:hidden;transition:.5s ease-in-out;display:flex}.gallery a:hover{flex-grow:50}.gallery img{max-width:100%;height:auto;object-fit:cover}.main .contenedor__grid .item-2{grid-column:2/4}@media (max-width:1400px){.contenedor__principal .article__exp{width:100%;display:flex;justify-content:center;align-items:center}}@media (max-width:425px){.gallery{width:100%;height:30vh;display:flex;gap:.3em;background-color:var(--Gray-200)}}
+.gallery,.main .contenedor__grid .item-1 {
+    width:100%;
+}
+.contenedor__principal .article__exp {
+    width:100%;
+    display:flex;
+    justify-content:end;
+    align-items:center;
+}
+.gallery {
+    height:47vh;
+    display:flex;
+    gap:.3em;
+    background-color:var(--Gray-200);
+}
+.gallery a {
+    height:100%;
+    flex:17;
+    object-fit:cover;
+    overflow:hidden;
+    transition:.5s ease-in-out;
+    display:flex;
+}
+.gallery a:hover {
+    flex-grow:50;
+}
+.gallery img {
+    max-width:100%;
+    height:auto;
+    object-fit:cover;
+}
+.main .contenedor__grid .item-2 {
+    grid-column:2/4;
+}
+@media (max-width:1400px) {
+    .contenedor__principal .article__exp {
+        width:100%;
+        display:flex;
+        justify-content:center;
+        align-items:center;
+    }
+}
+@media (max-width:425px) {
+    .gallery {
+        width:100%;
+        height:30vh;
+        display:flex;
+        gap:.3em;
+        background-color:var(--Gray-200)
+    }
+}
