--- a/dest/css/style.css
+++ b/dest/css/style.css
@@ -12399,7 +12399,7 @@ textarea.form-control-lg {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  height: 10em;
+  height: 3em;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -12411,6 +12411,10 @@ textarea.form-control-lg {
 
 header img {
   width: 10%;
+}
+
+.full-height {
+  height: 100vh;
 }
 
 .contenedor-tabla {
