--- a/Intranet/src/scss/base/_reset.scss
+++ b/Intranet/src/scss/base/_reset.scss
@@ -92,7 +92,7 @@ svg {
     fill:currentColor
 }
 body {
-    min-height:100vh;
+    // min-height:100vh;
     font-family:var(--tipo-principal);
     -webkit-hyphens:auto;
     -ms-hyphens:auto;
