--- a/Intranet/src/scss/tabla/_tabla.scss
+++ b/Intranet/src/scss/tabla/_tabla.scss
@@ -1,7 +1,7 @@
 @use '../custom' as *;
 
 .tabla{
-    @extend .table, .table-hover, .mt-5, .table-light, .table-striped, .shadow;
+    @extend .table, .table-hover, .mt-5, .table-light, .table-striped, .shadow, .table-responsive;
 }
 .contenedor-tabla{
     width: 100%;
