--- a/src/scss/modules/_modulo03.scss
+++ b/src/scss/modules/_modulo03.scss
@@ -29,7 +29,7 @@
                         line-height: 1.898em;
                     }
                     .action{
-                        background-color: c.$Pink-500;
+                        background-color: c.$Red-500;
                         color: c.$Gray-50;
                         text-transform: uppercase;
                         text-align: center;
