--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -4,7 +4,7 @@
 :root {
     --color-body:#f0f0f0;
     --color-nav:#70635A;
-    --color-text:#323232
+    --color-text:#323232;
 }
 /* * */
 header{
