Revert "cambio index"
This reverts commit 72e3f6fdb321c386805842289aec5d56014b9c61.

--- a/PaginaWeb/css/Estilos/app.css
+++ b/PaginaWeb/css/Estilos/app.css
@@ -870,6 +870,12 @@ body {
 .contenedor-Aviso .Articulo-2 iframe {
   height: 100%;
 }
+@media (max-width: 768px) {
+  .contenedor-Aviso {
+    display: grid;
+    grid-template-columns: 100%;
+  }
+}
 
 #swiper-1 .swiper-slide img {
   display: block;
