--- a/src/scss/modules/_modulopriva.scss
+++ b/src/scss/modules/_modulopriva.scss
@@ -22,4 +22,8 @@
             height: 100%;
         }
     }
+    @include m.tablet{
+        display: grid;
+        grid-template-columns: 100%;
+    }
 }
