--- a/src/scss/modules/_modulopriva.scss
+++ b/src/scss/modules/_modulopriva.scss
@@ -6,6 +6,7 @@
         grid-column: 1/3;
         p{
             line-height: 2em;
+            text-wrap: wrap;
         }
         h2{
             font-weight: 600;
@@ -25,5 +26,6 @@
     @include m.tablet{
         display: grid;
         grid-template-columns: 100%;
+        background-color: aqua;
     }
 }
