--- a/Intranet/src/scss/header/_header.scss
+++ b/Intranet/src/scss/header/_header.scss
@@ -30,6 +30,9 @@ header{
     grid-template-rows: repeat(3,1fr);
     row-gap: 9.5em;
 }
-.ayunt img{
+.LogoEscu{
+    width: 5%;
+}
+.logo-mur{
     width: 5%;
 }
