--- a/Intranet/src/scss/base/_reset.scss
+++ b/Intranet/src/scss/base/_reset.scss
@@ -1,4 +1,7 @@
 @charset "UTF-8";
+body{
+    background-color: #f4f6f9;
+}
 :root {
     --negro:#393939;
     --tipo-principal:Helvetica,Arial,sans-serif;
