--- a/IntranetV3/src/scss/botones/_btn.scss
+++ b/IntranetV3/src/scss/botones/_btn.scss
@@ -1,5 +1,5 @@
 @use '../custom' as *;
 
 .btn-Enviar{
-    @extend .btn, .btn-success;
+    @extend .btn, .btn-success, .text-light, .fw-bold, .shadow;
 }
