--- a/src/scss/base/_titulo.scss
+++ b/src/scss/base/_titulo.scss
@@ -13,6 +13,7 @@
                 overflow: hidden;
                 @include m.telefono{
                     font-size: 2em;
+                    background-color: aqua;
                 }
                 @include m.telefonoSlim{
                     font-size: 1.5em;
